<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SixthActivity"
    >

    <RelativeLayout
        android:id="@+id/linear"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="#ed9fd6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horz_guideline"
        app:layout_constraintGuide_percent="0.2"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horz_guideline2"
        app:layout_constraintGuide_percent="0.3"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horz_guideline3"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vert_guideline"
        app:layout_constraintGuide_percent="0.1"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vert_guideline2"
        app:layout_constraintGuide_percent="0.9"
        android:orientation="vertical"/>

    <HorizontalScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/horz_guideline3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/vert_guideline"
        app:layout_constraintRight_toRightOf="@+id/vert_guideline2"
        app:layout_constraintTop_toBottomOf="@+id/horz_guideline2"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="900dp"
            android:layout_height="300dp">

            <Button
                android:id="@+id/clickButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_1"
                android:textAllCaps="true"
                android:textSize="10sp"
                android:textColor="#ffffff"
                android:background="#42c2f5"
                android:layout_margin="50dp"
                />

            <Button
                android:id="@+id/clickButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_2"
                android:textAllCaps="true"
                android:textSize="10sp"
                android:textColor="#ffffff"
                android:background="#42c2f5"
                android:layout_margin="50dp"
                />

            <Button
                android:id="@+id/clickButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_3"
                android:textAllCaps="true"
                android:textSize="10sp"
                android:textColor="#ffffff"
                android:background="#42c2f5"
                android:layout_margin="50dp"
                />

            <Button
                android:id="@+id/clickButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_4"
                android:textAllCaps="true"
                android:textSize="10sp"
                android:textColor="#ffffff"
                android:background="#42c2f5"
                android:layout_margin="50dp"
                />

            <Button
                android:id="@+id/clickButton6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_5"
                android:textAllCaps="true"
                android:textSize="10sp"
                android:textColor="#ffffff"
                android:background="#42c2f5"
                android:layout_margin="50dp"
                />
        </LinearLayout>

    </HorizontalScrollView>


    <Button
        android:id="@+id/clickButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_view"
        android:textAllCaps="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/horz_guideline"
        android:textSize="10sp"
        android:background="#f54284"
        />

</androidx.constraintlayout.widget.ConstraintLayout>