<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdActivity"
    android:background="#ed9fd6">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horz_guideline1"
        app:layout_constraintGuide_percent="0.2"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horz_guideline2"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horz_guideline3"
        app:layout_constraintGuide_percent="0.6"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/vert_guideline"
    app:layout_constraintGuide_percent="0.25"
    android:orientation="vertical"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_1"
        android:id="@+id/textBox1"
        app:layout_constraintLeft_toLeftOf="@+id/vert_guideline"
        app:layout_constraintBottom_toBottomOf="@+id/horz_guideline1"
        android:textSize="30sp"
        android:background="#42c2f5"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_2"
        android:id="@+id/textBox2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/vert_guideline"
        android:textSize="30sp"
        android:background="#42c2f5"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_3"
        android:id="@+id/textBox3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/vert_guideline"
        android:textSize="30sp"
        android:background="#42c2f5"
        />

    <Button
        android:id="@+id/clickButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_view"
        android:textAllCaps="true"
        app:layout_constraintLeft_toLeftOf="@+id/vert_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/horz_guideline2"
        android:textSize="30sp"
        android:background="#f54284"
        />

    <Button
        android:id="@+id/clickButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_view"
        android:textAllCaps="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/horz_guideline3"
        android:textSize="10sp"
        android:background="#f54284"
        />

</androidx.constraintlayout.widget.ConstraintLayout>