<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FourthActivity"
    >

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horz_guideline1"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vert_guideline"
        app:layout_constraintGuide_percent="0.25"
        android:orientation="vertical"/>


    <TextView
        android:id="@+id/textBox1"
        android:layout_width="165dp"
        android:layout_height="154dp"
        android:layout_marginLeft="52dp"
        android:background="#ed9fd6"
        android:text="@string/blank_2"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/horz_guideline1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="" />

    <TextView
        android:id="@+id/textBox2"
        android:layout_width="202dp"
        android:layout_height="162dp"
        android:background="#f54284"
        android:gravity="center"
        android:text="@string/blank_1"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.523" />

    <TextView
        android:id="@+id/textBox3"
        android:layout_width="180dp"
        android:layout_height="134dp"
        android:layout_marginLeft="204dp"
        android:background="#ed9fd6"
        android:text="@string/blank_2"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horz_guideline1" />

    <TextView
        android:id="@+id/textBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#42c2f5"
        android:text="@string/text_1"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.514" />

</androidx.constraintlayout.widget.ConstraintLayout>